--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ wp-content/uploads/
 wp-content/wp-cache-config.php
 wp-content/plugins/hello.php
 uploads/
+themes/ayan-modern*.zip
 
 # WordPress configuration
 wp-config.php
